# QtWaitingSpinner-PySide6

./: .editorconfig  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  README.txt  demo.py  pyproject.toml  requirements_dev.txt  setup.py  spinner.py
.github/workflows/: pre-commit.yaml  tests.yaml
dev_config/: mypy.ini
pyqtspinner/: __init__.py  configurator.py  spinner.py
tests/: test_spinner.py
