[tool.poetry]
name = "pyqtspinner"
version = "1.0.1"
description = "Waiting spinner for PyQt5"
authors = ["Denis <fbjorn@users.noreply.github.com>"]
repository = "https://github.com/fbjorn/QtWaitingSpinner"
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.7"
PyQt5 = ">5.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-qt = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
pyqtspinner-conf = 'pyqtspinner.configurator:main'
